Newsletter: Fix form element layout issues

--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -10,20 +10,28 @@
 }
 
 .newsletter__input {
-  margin-right: 15px;
-  position: relative;
-  top: -2px;
+  margin-right: 1rem;
 
   input {
     background: $color-white;
-    height: 36px;
+    height: 2.3rem;
+    line-height: 2.3rem;
+    padding: 0;
+  }
+
+  .mdc-floating-label {
+    bottom: 0.7rem;
+  }
+
+  .mdc-floating-label--float-above {
+    bottom: 1.4rem;
   }
 }
 
 .newsletter__icon {
   fill: $color-red;
   position: relative;
-  top: 0.75em;
+  top: 0.8em;
   left: -0.15em;
 }
 
